[profile.release]
lto = "thin"

[workspace]
resolver = "2"
members = [
    "hugr",
    "hugr-core",
    "hugr-passes",
    "hugr-cli",
    "hugr-model",
    "hugr-llvm",
]
default-members = ["hugr", "hugr-core", "hugr-passes", "hugr-cli", "hugr-model"]

[workspace.package]
rust-version = "1.75"
edition = "2021"
homepage = "https://github.com/CQCL/hugr"
repository = "https://github.com/CQCL/hugr"
license = "Apache-2.0"
# authors

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci_run)'] }

missing_docs = "warn"
[workspace.lints.clippy]
# Unstable check, may cause false positives.
# https://github.com/rust-lang/rust-clippy/issues/5112
debug_assert_with_mut_call = "warn"

[workspace.dependencies]
portgraph = { version = "0.13.0" }
insta = { version = "1.34.0" }
bitvec = "1.0.1"
capnp = "0.20.1"
cgmath = "0.18.0"
cool_asserts = "2.0.3"
criterion = "0.5.1"
delegate = "0.13.0"
derive_more = "1.0.0"
downcast-rs = "2.0.1"
enum_dispatch = "0.3.11"
html-escape = "0.2.13"
itertools = "0.14.0"
jsonschema = "0.28.1"
lazy_static = "1.4.0"
num-rational = "0.4.1"
paste = "1.0"
petgraph = { version = "0.7.1", default-features = false }
proptest = "1.4.0"
proptest-derive = "0.5.0"
regex = "1.9.5"
regex-syntax = "0.8.3"
rstest = "0.24.0"
serde = "1.0"
serde_json = "1.0.97"
serde_yaml = "0.9.19"
smol_str = "0.3.1"
strum = "0.26.1"
strum_macros = "0.26.1"
thiserror = "2.0.6"
typetag = "0.2.7"
clap = { version = "4.5.4" }
clio = "0.3.5"
clap-verbosity-flag = "3.0.1"
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
predicates = "3.1.0"
indexmap = "2.3.0"
fxhash = "0.2.1"
bumpalo = { version = "3.16.0" }
pathsearch = "0.2.0"
base64 = "0.22.1"
ordered-float = "4.6.0"
pest = "2.7.12"
pest_derive = "2.7.12"
pretty = "0.12.3"
pretty_assertions = "1.4.1"

[profile.dev.package]
insta.opt-level = 3

# optimising these packages were found to contribute to property testing
# execution time.
#
# `flamegraph` below is https://github.com/flamegraph-rs/flamegraph
# $ perf record --call-graph=dwarf -F 99999 <unittest executable> prop_roundtrip_
# $ flamegraph --no-inline --perfdata perf.data
rand_chacha.opt-level = 3
rand_chacha.debug = 1
regex.opt-level = 3
regex.debug = 1
regex-automata.opt-level = 3
regex-automata.debug = 1
regex-syntax.opt-level = 3
regex-syntax.debug = 1
proptest.opt-level = 3
proptest.debug = 1
serde.opt-level = 3
serde.debug = 1
serde_json.opt-level = 3
serde_json.debug = 1
jsonschema.opt-level = 3
jsonschema.debug = 1
