[profile.release]
lto = "thin"

[workspace]
resolver = "2"
members = [
    "hugr",
    "hugr-core",
    "hugr-passes",
    "hugr-cli",
    "hugr-model",
    "hugr-llvm",
    "hugr-py",
    "hugr-persistent",
]
default-members = ["hugr", "hugr-core", "hugr-passes", "hugr-cli", "hugr-model"]

[workspace.package]
rust-version = "1.85"
edition = "2024"
homepage = "https://github.com/quantinuum/hugr"
repository = "https://github.com/quantinuum/hugr"
license = "Apache-2.0"
# authors

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    # Set by our CI
    'cfg(ci_run)',
    # Set by codecov
    'cfg(coverage,coverage_nightly)',
] }

missing_docs = "warn"

[workspace.lints.clippy]
# Unstable check, may cause false positives.
# https://github.com/rust-lang/rust-clippy/issues/5112
debug_assert_with_mut_call = "warn"
too_long_first_doc_paragraph = "warn"

[workspace.dependencies]
anyhow = "1.0.100"
insta = { version = "1.43.2" }
bitvec = "1.0.1"
capnp = "0.23.0"
cgmath = "0.18.0"
cool_asserts = "2.0.3"
delegate = "0.13.5"
derive_more = "2.0.1"
downcast-rs = "2.0.2"
enum_dispatch = "0.3.11"
html-escape = "0.2.13"
itertools = "0.14.0"
jsonschema = "0.35.0"
num-rational = "0.4.1"
pastey = "0.2.0"
proptest = "1.9.0"
proptest-derive = "0.7.0"
regex = "1.12.2"
regex-syntax = "0.8.8"
rstest = "0.26.1"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.145"
serde_with = "3.16.0"
serde_yaml = "0.9.34"
smallvec = "1.15.1"
smol_str = "0.3.1"
static_assertions = "1.1.0"
strum = "0.27.2"
tempfile = "3.22"
thiserror = "2.0.17"
typetag = "0.2.21"
clap = { version = "4.5.52" }
clio = "0.3.5"
clap-verbosity-flag = "3.0.4"
assert_cmd = "2.1"
assert_fs = "1.1.3"
predicates = "3.1.0"
indexmap = "2.12.0"
rustc-hash = "2.1.1"
bumpalo = "3.19.0"
pathsearch = "0.2.0"
base64 = "0.22.1"
ordered-float = "5.0.0"
pest = "2.8.2"
pest_derive = "2.8.2"
pretty = "0.12.5"
pretty_assertions = "1.4.1"
zstd = "0.13.2"
relrc = "0.5.0"
wyhash = "0.6.0"
schemars = "1.1.0"

# These public dependencies usually require breaking changes downstream, so we
# try to be as permissive as possible.
pyo3 = ">= 0.23.4, < 0.27"
portgraph = { version = "0.15.2" }
petgraph = { version = ">= 0.8.1, < 0.9", default-features = false }

[profile.dev.package]
insta.opt-level = 3

# optimising these packages were found to contribute to property testing
# execution time.
#
# `flamegraph` below is https://github.com/flamegraph-rs/flamegraph
# $ perf record --call-graph=dwarf -F 99999 <unittest executable> prop_roundtrip_
# $ flamegraph --no-inline --perfdata perf.data
rand_chacha.opt-level = 3
rand_chacha.debug = 1
regex.opt-level = 3
regex.debug = 1
regex-automata.opt-level = 3
regex-automata.debug = 1
regex-syntax.opt-level = 3
regex-syntax.debug = 1
proptest.opt-level = 3
proptest.debug = 1
serde.opt-level = 3
serde.debug = 1
serde_json.opt-level = 3
serde_json.debug = 1
jsonschema.opt-level = 3
jsonschema.debug = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# The profile that 'hugr-py' will build with
[profile.release-py]
inherits = "release"
lto = "fat"
strip = "symbols"
panic = "abort"
