[tool.poetry]
description = "Namespace for the python packages in the HUGR repository. See the individual packages for more information."
name = "hugr-project"
version = "0.0.0"
authors = ["TKET development team <tket-support@cambridgequantum.com>"]
readme = "README.md"
packages = [{ include = "quantunuum_hugr", from = "quantunuum-hugr-py" }]
package-mode = false

[tool.poetry.group.main.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
mypy = "^1.9.0"
ruff = "^0.3.3"

[tool.poetry.group.quantinuum-hugr.dependencies]
quantinuum-hugr = { path = "quantinuum-hugr-py", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
