[tool.poetry]
description = "Namespace for the python packages in the HUGR repository. See the individual packages for more information."
name = "hugr-project"
version = "0.0.0"
authors = ["TKET development team <tket-support@cambridgequantum.com>"]
readme = "README.md"
packages = [{ include = "hugr", from = "hugr-py" }]
package-mode = false

[tool.poetry.group.main.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
mypy = "^1.9.0"
ruff = "^0.3.3"
toml = "^0.10.0"

[tool.poetry.group.hugr.dependencies]
hugr = { path = "hugr-py", develop = true }


[tool.poetry.dependencies]
typing-extensions = "^4.12.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
filterwarnings = "ignore::DeprecationWarning:lark.*"
