[tool.uv.workspace]
members = ["hugr-py"]


[tool.uv]

dev-dependencies = [
    "pre-commit >=3.6.2,<4",
    "pytest >=8.1.1,<9",
    "pytest-cov >=5.0.0,<6",
    "maturin >=1.7.0,<2",
    "mypy >=1.9.0,<2",
    "ruff >=0.6.2,<0.7",
    "toml >=0.10.0,<0.11",
    "syrupy >=4.7.1,<5",
    "types-zstd >= 1.5.6.6",
    "pytket >= 1.34.0",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
filterwarnings = "ignore::DeprecationWarning:lark.*"


[tool.mypy]
# TODO: Fix lints and enable this
#strict = true

[tool.coverage.report]
exclude_also = [
    # Don't complain about missing coverage on typing imports
    "if TYPE_CHECKING:",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "raise InternalGuppyError",

    # Don't complain about abstract methods, they aren't run:
    "@abstractmethod",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.maturin]
# Maturin is not the build system for the workspace (it is only used for `hugr-py`).
# We mirror the `hugr-py/pyproject.toml` config here so `maturin develop` still works
# from the root of the workspace.
module-name = "hugr._hugr"
python-source = "hugr-py/src/"
manifest-path = "hugr-py/Cargo.toml"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
