[package]
name = "hugr-cli"
version = "0.6.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/hugr-cli/"
homepage = { workspace = true }
repository = { workspace = true }
description = "Compiler passes for Quantinuum's HUGR"
keywords = ["Quantum", "Quantinuum"]
categories = ["compilers"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap-verbosity-flag.workspace = true
hugr-core = { path = "../hugr-core", version = "0.9.1" }
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
clio = { workspace = true, features = ["clap-parse"] }

[lints]
workspace = true

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true }
rstest.workspace = true

[[bin]]
name = "hugr"
path = "src/main.rs"
doc = false
