[package]
name = "hugr-cli"
version = "0.14.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/hugr-cli/"
homepage = { workspace = true }
repository = { workspace = true }
description = "Compiler passes for Quantinuum's HUGR"
keywords = ["Quantum", "Quantinuum"]
categories = ["compilers"]

[lib]
bench = false

[dependencies]
clap = { workspace = true, features = ["derive", "cargo"] }
clap-verbosity-flag.workspace = true
derive_more = { workspace = true, features = ["display", "error", "from"] }
hugr = { path = "../hugr", version = "0.14.0" }
serde_json.workspace = true
clio = { workspace = true, features = ["clap-parse"] }

[lints]
workspace = true

[package.metadata.cargo-semver-checks.lints]
workspace = true
# Temporarily disabled due to Package being moved to `hugr-core` triggering an error in rustdoc
# https://github.com/obi1kenobi/cargo-semver-checks/issues/355
enum_missing = "warn"
struct_missing = "warn"

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true }
rstest.workspace = true

[[bin]]
name = "hugr"
path = "src/main.rs"
doc = false
bench = false
