[package]
name = "hugr-cli"
version = "0.24.3"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/hugr-cli/"
homepage = { workspace = true }
repository = { workspace = true }
description = "Compiler passes for Quantinuum's HUGR"
keywords = ["Quantum", "Quantinuum"]
categories = ["compilers"]

[lib]
bench = false

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
clap = { workspace = true, features = ["derive", "cargo"] }
clap-verbosity-flag.workspace = true
derive_more = { workspace = true, features = ["display", "error", "from"] }
hugr = { path = "../hugr", version = "0.24.3" }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
clio = { workspace = true, features = ["clap-parse"] }
anyhow.workspace = true
thiserror.workspace = true
tracing = { version = "0.1.43", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["fmt"], optional = true }
tabled = "0.20.0"
schemars = { workspace = true, features = ["derive"] }


[lints]
workspace = true

[package.metadata.cargo-semver-checks.lints]
workspace = true
# Temporarily disabled due to Package being moved to `hugr-core` triggering an error in rustdoc
# https://github.com/obi1kenobi/cargo-semver-checks/issues/355
enum_missing = "warn"
struct_missing = "warn"

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
rstest.workspace = true

[[bin]]
name = "hugr"
path = "src/main.rs"
doc = false
bench = false

[package.metadata.binstall]
# Override binstall default since there are multiple packages in the repo
# https://github.com/cargo-bins/cargo-binstall/blob/main/SUPPORT.md#Defaults
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
