[package]
name = "hugr-core"
version = "0.14.4"
edition = { workspace = true }
rust-version = { workspace = true }

license = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/hugr/"
homepage = { workspace = true }
repository = { workspace = true }
description = "Quantinuum's Hierarchical Unified Graph Representation"
keywords = ["Quantum", "Quantinuum"]
categories = ["compilers"]

[lints]
workspace = true

[features]
default_features = ["model_unstable", "zstd"]
extension_inference = []
declarative = ["serde_yaml"]
model_unstable = ["hugr-model"]
zstd = ["dep:zstd"]

[lib]
bench = false

[[test]]
name = "model"
required-features = ["model_unstable"]

[dependencies]
hugr-model = { version = "0.17.1", path = "../hugr-model", optional = true }

cgmath = { workspace = true, features = ["serde"] }
delegate = { workspace = true }
derive_more = { workspace = true, features = ["display", "error", "from"] }
downcast-rs = { workspace = true }
enum_dispatch = { workspace = true }
fxhash.workspace = true
html-escape = { workspace = true }
indexmap.workspace = true
itertools = { workspace = true }
lazy_static = { workspace = true }
packed_struct = { workspace = true, features = ["byte_types_64"] }
paste = { workspace = true }
petgraph = { workspace = true }
portgraph = { workspace = true, features = ["serde", "petgraph"] }
regex = { workspace = true }
# Rc used here for Extension, but unfortunately we must turn the feature on globally
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true, optional = true }
smol_str = { workspace = true, features = ["serde"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
typetag = { workspace = true }
semver = { workspace = true, features = ["serde"] }
zerocopy.workspace = true
zstd = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
cool_asserts = { workspace = true }
insta = { workspace = true, features = ["yaml"] }
jsonschema = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }


# Required for documentation examples
hugr = { path = "../hugr" }
serde_yaml = "0.9.34"
