[package]
name = "hugr-llvm"
version = "0.16.0"
description = "A general and extensible crate for lowering HUGRs into LLVM IR"

edition.workspace = true
rust-version.workspace = true

readme = "README.md"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/hugr-llvm"
authors = ["TKET development team <tket-support@quantinuum.com>"]
keywords = ["Quantum", "Quantinuum"]
categories = ["compilers"]

[features]
test-utils = [
    "insta",
    "rstest",
    "portgraph",
]

default = ["llvm14-0"]
llvm14-0 = ["inkwell/llvm14-0"]


[dependencies]
inkwell = { version = "0.5.0", default-features = false }
hugr-core = { path = "../hugr-core", version = "0.16.0" }
anyhow = "1.0.97"
itertools.workspace = true
delegate.workspace = true
petgraph.workspace = true
strum.workspace = true

insta = { workspace = true, optional = true }
rstest = { workspace = true, optional = true }
portgraph = { workspace = true, optional = true }
derive_more = { workspace = true, features = ["debug"] }
lazy_static.workspace = true

[dev-dependencies]
hugr-llvm = { "path" = ".", features = ["test-utils"] }
