[package]
name = "hugr-llvm"
version = "0.24.3"
description = "A general and extensible crate for lowering HUGRs into LLVM IR"

edition.workspace = true
rust-version.workspace = true

readme = "README.md"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/hugr-llvm"
authors = ["TKET development team <tket-support@quantinuum.com>"]
keywords = ["Quantum", "Quantinuum"]
categories = ["compilers"]

[features]
test-utils = ["insta", "rstest", "portgraph"]

# LLVM 20 only.
default = ["llvm20-1"]
llvm20-1 = ["inkwell/llvm20-1"]

[lints]
workspace = true

[dependencies]
inkwell = { version = "0.7", default-features = false }
hugr-core = { path = "../hugr-core", version = "0.24.3" }
anyhow.workspace = true
itertools.workspace = true
delegate.workspace = true
petgraph.workspace = true
strum.workspace = true

insta = { workspace = true, optional = true }
rstest = { workspace = true, optional = true }
portgraph = { workspace = true, optional = true }
derive_more = { workspace = true, features = ["debug"] }

[dev-dependencies]
hugr-llvm = { "path" = ".", features = ["test-utils"] }
hugr-passes = { path = "../hugr-passes" }

[build-dependencies]
cc = "1.2.46"
