[package]
name = "hugr-model"
version = "0.14.1"
readme = "README.md"
documentation = "https://docs.rs/hugr-model/"
description = "Data model for Quantinuum's HUGR intermediate representation"
keywords = ["Quantum", "Quantinuum"]
categories = ["compilers"]
rust-version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
bumpalo = { workspace = true, features = ["collections"] }
capnp = "0.20.1"
derive_more = { version = "1.0.0", features = ["display"] }
fxhash.workspace = true
indexmap.workspace = true
pest = "2.7.12"
pest_derive = "2.7.12"
pretty = "0.12.3"
smol_str = { workspace = true, features = ["serde"] }
thiserror.workspace = true

[lints]
workspace = true

[build-dependencies]
capnpc = "0.20.0"

[dev-dependencies]
insta.workspace = true
pretty_assertions = "1.4.1"
