[package]
name = "hugr-passes"
version = "0.20.1"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/hugr-passes/"
homepage = { workspace = true }
repository = { workspace = true }
description = "Compiler passes for Quantinuum's HUGR"
keywords = ["Quantum", "Quantinuum"]
categories = ["compilers"]

[lints]
workspace = true

[lib]
bench = false

[dependencies]
hugr-core = { path = "../hugr-core", version = "0.20.1" }
portgraph = { workspace = true }
ascent = { version = "0.8.0" }
derive_more = { workspace = true, features = ["display", "error", "from"] }
itertools = { workspace = true }
lazy_static = { workspace = true }
paste = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }
strum = { workspace = true }
once_cell = "1.21.3"

[dev-dependencies]
rstest = { workspace = true }
proptest = { workspace = true }
proptest-recurse = { version = "0.5.0" }
