[project]
name = "hugr"
version = "0.8.1"
requires-python = ">=3.10,<3.13"
description = "Quantinuum's common representation for quantum programs"
license = { file = "LICENCE" }
readme = "README.md"
authors = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
maintainers = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pydantic>=2.8,<2.9",
    "pydantic-extra-types>=2.9.0",
    "semver>=3.0.2",
    "graphviz>=0.20.3",
]

[project.optional-dependencies]
docs = ["sphinx>=8.0.2,<9.0.0", "sphinx-book-theme>=1.1.2"]

[project.urls]
homepage = "https://github.com/CQCL/hugr/tree/main/hugr-py"
repository = "https://github.com/CQCL/hugr/tree/main/hugr-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
